[project]
name = "comfyui-latent-to-cuda"
version = "1.0.0"
description = "ComfyUI custom node to move latents between CPU and CUDA"
authors = [
    {name = "imcrisam"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "torch",
]

[project.urls]
Repository = "https://github.com/imcrisam/comfyui-latent-to-cuda"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.py"]
